tests/mut_match_guard_typecheck_error.test
let f = fun x -> match x with
| `A y when y + "bad" -> y
| _ -> 0
;
####
TypeError: Value is required to have type int by the + operator expression here:
let f = fun x -> match x with
| `A y when y + "bad" -> y
                ^~~~~      
| _ -> 0
;
However, that value may have type str here:
let f = fun x -> match x with
| `A y when y + "bad" -> y
                ^~~~~      
| _ -> 0
;
